Fix spacing around icon in copy citation button

--- a/wp-content/themes/csisnuclearnetwork/assets/_scss/pages/single.scss
+++ b/wp-content/themes/csisnuclearnetwork/assets/_scss/pages/single.scss
@@ -406,6 +406,11 @@
     @include breakpoint('large') {
       max-width: unset;
     }
+
+    .btn svg {
+      margin-right: rem(8);
+      margin-left: 0;
+    }
   }
 
   .cite__citation {
